[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "near-data-science"
version = "1.0.0"
description = "Build PyPI Package: near-data-science - NEAR Analytics Tools"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
near-data-science = "near_data_science.analyzer:main"
